@@ -1,3 +1,8 @@
+2004-11-03  Jonathan Wakely  <redi@gcc.gnu.org>
+
+	* include/bits/stl_numeric.h (partial_sum, adjacent_difference):
+	Avoid dereferencing two times __first in the prologue.
+ 
 2004-11-03  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/bits/stl_numeric.h: Trivial formatting fixes.
